# rscompute

./: Cargo.toml  README.md
src/: context.rs  data.rs  main.rs  shader.rs
src/demo/: matrix5x5.rs  matrix_nx_m.rs  mod.rs  multiply5x5_shader.rs  multiply_nx_m_shader.rs
src/shaders/: matrix_multiplication.comp  sqrt.comp
