[package]
name = "rscompute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "matrix-multiplication"
path = "src/main.rs"

[dependencies]
ash = "0.38.0+1.3.281"
ash-window = "0.13.0"
shaderc = "0.8.3"

